2006-12-28  Eric Vaitl  <evaitl@cisco.com>

	* sysdeps/linux-gnu/mipsel/* Added mipsel support
	* debug.h Added printf format attribute to debug_
	* elf.h Added mips relocation data to struct ltelf
	* elf.c (do_init_elf) Read mips relocation data
	* elf.c (read_elf) On the mips loop through mips_gotsym 
	instead of relplt_count.
	* process_event.c (process_breakpoint) For the mips, 
	conditionally add a new breakpoint if the address of the 
	function changes because of lazy relocation. 
	* breakpoints.c (enable_all_breakpoints) For the mips, 
	reinsert breakpoints after the child has been started. 
	

2006-11-30  Petr Machata  <pmachata@redhat.com>

	* elf.c (elf_gnu_hash): renamed to private_elf_gnu_hash to avoid
	conflicts with non-static version from libelf.

2006-11-30  Petr Machata  <pmachata@redhat.com>

	* elf.c (in_load_libraries): removed unused variables
	bitmask_idxbits and shift.
	* elf.c (do_init_elf, opd2addr): use ARCH_SUPPORTS_OPD to
	determine whether to load/use .opd section
	* sysdeps/linux-gnu/*/arch.h: define ARCH_SUPPORTS_OPD accordingly
	* breakpoints.c (insert_breakpoint): rewrite loop to canonical for

2006-10-13  Olaf Hering <olh@suse.de>

	* options.c: fix up typo for config file

2006-09-25  Olaf Hering <olh@suse.de>

	* elf.c, elf.h : remove confilict with glibc SHT_GNU_HASH, include
	elf_gnu_hash() directly, remove special casing and fix up output
	specifier.

2006-09-18    Steve Fink <sphink@gmail.com>

	* display_args.c: store arg_num in arg_type_info
	* display_args.c: support 'double' parameters
	* display_args.c: fix implementation of float,double params for ia64
	* output.c, process_event.c: store arg_num in arg_type_info
	* read_config_file.c: support 'double' parameters
	* read_config_file.c: store arg_num in arg_type_info, and as a result,
	stop using singleton objects for any of the arg_type_info's.
	* read_config_file.c: improve support for struct field alignments