@@ -1,3 +1,13 @@
+2007-01-19  Petr Machata  <pmachata@redhat.com>
+
+	* sysdeps/linux-gnu/trace.c (trace_pid): wait for child to stop,
+	as indicated by ptrace documentation.
+	* proc.c (open_pid): start the traced child again, it will have
+	been stopped after trace_pid.  Fixes tracing with -p.
+	* breakpoints.c: initialize proc->breakpoints always, don't wait
+	untill it might be needed.  This renders a check in insert_breakpoint
+	superfluous.  Fixes a sigsegvs experienced with -L.
+
 2006-12-28  Eric Vaitl  <evaitl@cisco.com>
 
 	* sysdeps/linux-gnu/mipsel/* Added mipsel support
